# strappy

./: .gitignore  AGENTS.md  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py
config/: __init__.py
config/app_settings/: README.md  bettermouse_config.plist  com.googlecode.iterm2.plist
config/brew_packages/: README.md  __init__.py  brew_packages.toml  nvm_package.py
config/dotfiles/: .gitconfig  .gitignore  .gitmessage  .ideavimrc  .zshrc  README.md  __init__.py  pip.conf
config/dotfiles/claude/: README.md  settings.json
config/dotfiles/claude/skills/: README.md
config/dotfiles/claude/skills/thermo-nuclear-code-quality-review/: SOURCE.md
config/dotfiles/codex/: AGENTS.md  README.md  config.toml
config/dotfiles/codex/memories/: list_memories.py
config/dotfiles/codex/rules/: default.rules
config/dotfiles/codex/skills/: README.md
config/dotfiles/codex/skills/deslop/: README.md  SKILL.md
config/dotfiles/codex/skills/deslop/agents/: openai.yaml
config/dotfiles/codex/skills/grill-me/: SOURCE.md
config/dotfiles/codex/skills/grilling/: SKILL.md  SOURCE.md
config/dotfiles/codex/skills/review-swarm/: README.md  SKILL.md
config/dotfiles/codex/skills/thermo-nuclear-code-quality-review/: LICENSE.MIT  SKILL.md
docs/: codex_memories.md  docs.md
install/: bootstrap.sh
knowledge_base/: README.md  codex_app_homebrew_cask.md  how_to_use_the_oracle.md  list_kb.py
logs/: .gitignore  __init__.py
strappy/: __init__.py  __main__.py  bootstrap.py  package.py
strappy/util/: loggable.py
tests/: test_bootstrap.py  test_loggable.py  test_package.py
(+1 files in other folders)
